--- a/Release/.htaccess
+++ b/Release/.htaccess
@@ -17,6 +17,9 @@ RewriteCond %{HTTP:Accept-encoding} gzip
 RewriteCond %{REQUEST_FILENAME}gz -f
 RewriteRule ^(.*)\.unity3d$ $1\.unity3dgz [L]
 
+AddType application/octet-stream .memgz .datagz .unity3dgz
+AddType application/javascript .jsgz
+
 AddEncoding gzip .jsgz
 AddEncoding gzip .datagz
 AddEncoding gzip .memgz
