--- a/Release/.htaccess
+++ b/Release/.htaccess
@@ -1,6 +1,7 @@
 Options +FollowSymLinks
 RewriteEngine on
 
+RewriteBase /build/
 RewriteCond %{HTTP:Accept-encoding} gzip
 RewriteCond %{REQUEST_FILENAME}gz -f
 RewriteRule ^(.*)\.js$ $1\.jsgz [L]
